--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bed_management_frontend",
   "version": "0.1.0",
+  "homepage": "https://christian.dallago.us/bed_management_frontend",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
